* Makefile.in (c-parse.o, c-common.o): Update dependencies. 	* c-common.c: Include diagnostic.h. 	(c_common_finish): New. 	* c-common.h (c_common_finish): New. 	* c-lang.c (LANG_HOOKS_FINISH): Override. 	* c-parse.in: Don't include diagnostic.h. 	(finish_parse): Remove. 	* langhooks.h: Update comments. 	* toplev.c (lang_dependent_init): New prototype. 	(finalize): New. 	(compile_file): Split cleanup code out to finalize. 	(lang_dependent_init): Stop if lang_hooks.init fails. 	(toplev_main): Update. 	* tree.h (finish_parse): Remove.
ada:	* misc.c (gnat_decode_option, gnat_init_options): Make definitions
	static too.
	(gnat_init): Don't return NULL.
	(finish_parse): Remove.
cp:	* lex.c (cxx_finish): Call c_common_finish.
	(finish_parse): Remove.
f:	* com.c (finish_parse): Remove.
	(ffe_finish): Move body of finish_parse.
java:	* lang.c (finish_parse): Rename to java_finish.
	(LANG_HOOKS_FINISH, java_finish): New.
objc:	* objc-act.c (LANG_HOOKS_FINISH): Override.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47141 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-18  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (gnat_decode_option, gnat_init_options): Make definitions
+	static too.
+	(gnat_init): Don't return NULL.
+	(finish_parse): Remove.
+
 2001-11-17  Laurent Guerby  <guerby@acm.org>
 
 	* Make-lang.in (GNATLIBFLAGS): Add -W -Wall.
