--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sun Nov 18 07:40:07 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* config/alpha/vms.h (DIR_SEPARATOR, PREFIX). Don't define.
+	(HAS_INIT_SECTION): Define.
+	(REAL_ARITHMETIC): Don't undefine.
+
 2001-11-18  Egor Duda  <deo@logos-m.ru>
 
 	* config/i386/cygwin.h: Strip leading '*' from name, if any.
