* config/alpha/alpha.c (alpha_start_function, VMS): Cast shift 	arg to HOST_WIDE_INT, not long.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47146 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 Sun Nov 18 07:40:07 2001  Douglas B. Rupp  <rupp@gnat.com>
 
+	* config/alpha/alpha.c (alpha_start_function, VMS): Cast shift
+	arg to HOST_WIDE_INT, not long.
+
 	* config/alpha/vms.h (DIR_SEPARATOR, PREFIX). Don't define.
 	(HAS_INIT_SECTION): Define.
 	(REAL_ARITHMETIC): Don't undefine.
