* c-decl.c (c_decode_option): Give deprecation warning for 	-traditional. 	* doc/invoke.texi (-traditional): Note that this option is 	deprecated.
testsuite:
	* gcc.dg/cpp/assert_trad1.c, gcc.dg/cpp/tr-paste.c,
	gcc.dg/cpp/tr-str.c: Use -traditional-cpp instead of -traditional.
	* gcc.dg/ext-glob.c: Expect -traditional deprecation warning.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47147 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* gcc.dg/cpp/assert_trad1.c, gcc.dg/cpp/tr-paste.c,
+	gcc.dg/cpp/tr-str.c: Use -traditional-cpp instead of -traditional.
+	* gcc.dg/ext-glob.c: Expect -traditional deprecation warning.
+
+2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>
+
 	* gcc.dg/no-builtin-1.c: New test.
 
 2001-11-16  Jakub Jelinek  <jakub@redhat.com>
