--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -1147,6 +1147,8 @@ literal characters @samp{x} and @samp{a} respectively.  Without
 representation of a character, and @samp{\a} produces a bell.
 @end itemize
 
+This option is deprecated and may be removed.
+
 You may wish to use @option{-fno-builtin} as well as @option{-traditional}
 if your program uses names that are normally GNU C built-in functions for
 other purposes of its own.
