* doc/install-old.texi: Move some sections out to ... 	* doc/collect2.texi, doc/configfiles.texi, doc/headerdirs.texi: 	... here.  New files.  Make into chapters rather than sections. 	* doc/gcc.texi: Include the new files and add menu entries for 	them. 	* Makefile.in ($(docdir)/gcc.info, gcc.dvi): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47150 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/gcc.texi
+++ b/gcc/doc/gcc.texi
@@ -262,6 +262,9 @@ bugs.  It corresponds to GCC version 3.1.
 * Target Macros::   How to write the machine description C macros and functions.
 * Config::          Writing the @file{xm-@var{machine}.h} file.
 * Fragments::       Writing the @file{t-@var{target}} and @file{x-@var{host}} files.
+* Configuration Files::  Files created by running @code{configure}.
+* Collect2::        How @code{collect2} works; how it finds @code{ld}.
+* Header Dirs::     Understanding the standard header file directories.
 @end ifset
 
 * Funding::         How to help assure funding for free software.
@@ -318,6 +321,9 @@ bugs.  It corresponds to GCC version 3.1.
 @include tm.texi
 @include hostconfig.texi
 @include fragments.texi
+@include configfiles.texi
+@include collect2.texi
+@include headerdirs.texi
 @end ifset
 
 @include funding.texi
