2001-11-18  Toon Moene  <toon@moene.indiv.nluug.nl>
	* Make-lang.in: Remove all references to LANGUAGES
	and the stamp files that depend on its value.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47152 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-18  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* Make-lang.in: Remove all references to LANGUAGES
+	and the stamp files that depend on its value.
+
 Sun Nov 18 11:13:04 2001  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* com.c (finish_parse): Remove.
