--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-18  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR bootstrap/4020
+	* mklibgcc.in: Add missing semi-colons.
+	* Makefile.in: Same.
+
 Sun Nov 18 16:47:00 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* expr.c (expand_expr, case VAR_DECL): Update alignment of DECL_RTL
