* verify.cc (_Jv_BytecodeVerifier::branch_prepass) [op_sipush]: 	Skip a short, not a byte. 	[op_newarray]: Skip a byte, not a short.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47163 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2001-11-18  Tom Tromey  <tromey@redhat.com>
 
+	* verify.cc (_Jv_BytecodeVerifier::branch_prepass) [op_sipush]:
+	Skip a short, not a byte.
+	[op_newarray]: Skip a byte, not a short.
+
 	* verify.cc (_Jv_BytecodeVerifier::get_type_val_for_signature):
 	Added `B' case.
 
