* doc/fragments.texi, doc/trouble.texi: Remove links to old 	installation chapter. 	* doc/gcc.texi: Don't claim that this manual documents 	installation.  Mark Installation menu entry as being out of date.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/fragments.texi
+++ b/gcc/doc/fragments.texi
@@ -7,8 +7,8 @@
 @chapter Makefile Fragments
 @cindex makefile fragment
 
-When you configure GCC using the @file{configure} script
-(@pxref{Installation}), it will construct the file @file{Makefile} from
+When you configure GCC using the @file{configure} script,
+it will construct the file @file{Makefile} from
 the template file @file{Makefile.in}.  When it does this, it will
 incorporate makefile fragment files from the @file{config} directory,
 named @file{t-@var{target}} and @file{x-@var{host}}.  If these files do
