--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-19  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc_release: Add /usr/local/bin to path when local.
+
 2001-11-06  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* update_web_docs: Set SOURCEDIR so that install manual can be
