--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-19  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc (_Jv_BytecodeVerifier::verify_instructions_0)
+	[op_lshl, op_lshr, op_lushr]: Shift argument is an int, not a
+	long.
+
 2001-11-18  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (type::to_array): New method.
