--- a/gcc/config/mn10200/mn10200.md
+++ b/gcc/config/mn10200/mn10200.md
@@ -264,7 +264,7 @@
 
     default:
       {
-        long val;
+        long val = 0;
         REAL_VALUE_TYPE rv;
 
 	if (GET_CODE (operands[1]) == CONST_DOUBLE)
