--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,9 @@
-2001-11-19  Neil Booth  <neil@daikokuya.demon.co.uk>
+2001-11-19  Jeff Law <law@redhat.com>
+
+	* gcse.c (cprop_jump): Clear JUMP_LABEL field when we create
+	a nop-jump.
+
+2000-11-19  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppmacro.c (_cpp_backup_tokens): Revert previous check-in.
 	Don't fall off the base token run.
