* doc/hostconfig.texi (DUMPFILE_FORMAT): Move into the table.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47186 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* doc/hostconfig.texi (DUMPFILE_FORMAT): Move into the table.
+
 Mon Nov 19 16:57:44 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* toplev.c (DUMPFILE_FORMAT): Define default.
